<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <TextView 
        android:id="@+id/text_view_participations_title"  
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:layout_height="wrap_content" 
        android:layout_width="fill_parent" 
        android:padding="4dip" />
    
    <TextView 
        android:id="@+id/text_view_participations_question_text"  
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:padding="4dip" />
    
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scroller_participations_question_options"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        
        <LinearLayout 
            android:id="@+id/linear_layout_participations_question_options"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
        
    </ScrollView>
    
    <LinearLayout 
        android:id="@+id/linear_layout_participations_buttons"
        android:layout_height="wrap_content"  
        android:layout_width="fill_parent" 
        android:paddingTop="20dip">
        
        <Button
            android:layout_width="fill_parent"
            android:id="@+id/button_participations_back"
            android:text="@string/participations_back_button"
            android:layout_height="wrap_content" 
            android:layout_weight="1"
            android:padding="4dip">
        </Button>
        
        <Button
            android:id="@+id/button_participations_cancel"
            android:text="@string/participations_cancel_button"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent" 
            android:layout_weight="1"
            android:padding="4dip"
            android:onClick="cancel">
        </Button>
    
        <Button
            android:layout_width="fill_parent"
            android:id="@+id/button_participations_next"
            android:text="@string/participations_next_button"
            android:layout_height="wrap_content" 
            android:layout_weight="1"
            android:padding="4dip">
        </Button>
    
    </LinearLayout>
    
</LinearLayout>